--- a/package.json
+++ b/package.json
@@ -8,13 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.3.3",
     "framer-motion": "^11.5.4",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.2.0",      
+    "react-dom": "^18.2.0",   
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
-    
   },
   "scripts": {
     "start": "react-scripts start",
@@ -22,7 +21,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -45,7 +44,5 @@
   "devDependencies": {
     "gh-pages": "^6.1.1"
   },
-  "homepage": "https://jfelipeschwaab.github.io/meu-portfolio"
-
-  
+  "homepage": "https://jfelipeschwaab.github.io"
 }
